--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.2.1",
@@ -21,7 +21,6 @@
     "pe7-icon": "^1.0.4",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-shallow-compare": "^15.6.0",
     "react-animated-css": "^1.0.4",
@@ -30,9 +29,11 @@
     "react-bootstrap": "^0.32.4",
     "react-chartjs-2": "^2.7.4",
     "react-dev-utils": "^4.2.3",
+    "react-dom": "^16.13.1",
     "react-getscreen": "^1.1.3",
     "react-google-maps": "^9.4.5",
     "react-hamburgers": "^1.0.0",
+    "react-helmet": "^6.1.0",
     "react-map-gl": "^4.0.5",
     "react-metismenu": "^1.4.0",
     "react-motion": "^0.5.2",
@@ -41,6 +42,7 @@
     "react-redux-form": "^1.16.12",
     "react-responsive-tabs": "^3.0.0",
     "react-router-dom": "^4.4.0-beta.6",
+    "react-scripts": "3.4.1",
     "react-scroll": "^1.7.10",
     "react-scrollspy": "^3.3.5",
     "react-simple-maps": "^0.12.1",
@@ -57,7 +59,6 @@
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
     "style-loader": "0.18.2",
-    "react-scripts": "3.4.1",
     "yup": "^0.29.1"
   },
   "scripts": {
